fix comment position

--- a/index.html
+++ b/index.html
@@ -1704,7 +1704,7 @@ INTERESTLIST.forEach((line) => {
 });
 
 
-<!-- CODE STARTS HERE (only modify/delete if you know what you're doing!) -->
+// CODE STARTS HERE (only modify/delete if you know what you're doing!)
 const displayArea = screen.width * screen.height;
 const resolution = Math.sqrt(displayArea);
 const background = document.getElementById('background');
