--- a/index.html
+++ b/index.html
@@ -1589,9 +1589,11 @@ Bands/Singers
 - Coldplay
 - Crown the Empire
 - Crush40
+- DECO*27
 - DM Dokuro
 - Dream
 - EDEN
+- EmuEmi
 - Fox Stevenson
 - Guns N' Roses
 - Hans Zimmer
