--- a/index.html
+++ b/index.html
@@ -1501,6 +1501,7 @@ const STYLES = [
 "Sun_Gazer.webp"
 "Take_Flight_in_Music.webp"
 "Techies_at_Work.webp"
+"Tobi.webp"
 "Together.webp"
 "Tokiboki.webp"
 "Winter_Solstice.webp"
