--- a/index.html
+++ b/index.html
@@ -1647,6 +1647,7 @@ Games
 - Pokémon Mainline Games
 - Rain World
 - Sigmund Corp. Series
+- Silent Hill 2
 - Sonic the Hedgehog
 - Stray
 - Terraria
