HOW DID I FORGET THEM

--- a/index.html
+++ b/index.html
@@ -1607,6 +1607,7 @@ Bands/Singers
 - Laura Shigihara
 - Learke
 - Linkin Park
+- My Chemical Romance
 - My Little Pony songs
 - Panic! at the Disco
 - Queen
