--- a/index.html
+++ b/index.html
@@ -1453,6 +1453,7 @@ const STYLES = [
 "Cameramaxxing.webp"
 "Cashel.webp"
 "Chinchilla_in_the_Aurora.webp"
+"Chu~!.webp"
 "Cruffle_DTA_.webp"
 "Daf_Ducky.webp"
 "Depression_Hug.webp"
@@ -1488,6 +1489,7 @@ const STYLES = [
 "Roseland.webp"
 "Say_Cheese.webp"
 "Serene_Evening.webp"
+"Shard!.webp"
 "She_So_Spacey.webp"
 "Shimp.webp"
 "Shooting_Stars.webp"
