--- a/index.html
+++ b/index.html
@@ -1466,6 +1466,7 @@ const STYLES = [
 "Foxo_Duo.webp"
 "Hoshikage.webp"
 "ICE-CREAM_MONSTER.webp"
+"It'll_Be_Ok.webp"
 "Intergalactic_Mayonnaise.webp"
 "Kandi_Boy_Raver.webp"
 "Kittydog_Patch_w.webp"
