does the file need to have no spaces or

--- a/index.html
+++ b/index.html
@@ -1521,6 +1521,7 @@ const STYLES = [
 "Big_Monkeys_VS_Small_Bloons.webp"
 "Bonnie_Lovin_the_Mines.webp"
 "Cyber_Quincy__Total_Transformation_BG.webp"
+"Gacha Monkey.webp"
 "Jackie_BG.webp"
 "LMK_OCs_x_Bloons_Collage.webp"
 "Mental_Health_Monkey_-_A_Little_Down_BG.webp"
