--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
 			<div class="paragraph ripples" style="animation-delay: -0.5s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow" style="animation-delay: 2s">YES</b>: Ask me about Commissions and Art Trades!<br />
+					<b class="rainbow" style="animation-delay: 2s">YES</b>:
 					Show me things or ask for feedback on your art, I don't mind! :3<br />
 					Use my art or draw my characters, just so long as you give credit and don't repost my art places for your own clout!<br />
 					Drawing my OCs interacting with your OCs, if you think your characters would be friends with any of mine please go ahead, I'd love to see it!<br />
@@ -1071,7 +1071,7 @@
 		</h1>
 		<div class="container">
 			All artwork examples are from 2024!<br />
-			Only accepting <span style="color: #ff7fbf">lineless cell shade</span> and <span style="color: #ff7fbf">Bloons style</span> commissions on PayPal at this time,<br />
+			Commissions are currently <span style="color: #ff7fbf">closed, so please don't enquire at this time!</span>!<br />
 			All prices are in USD, DM me on any <a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">social platform</a> if you're interested!<br />
 			<br />
 			<b class="rainbow" style="font-size: 24px; animation-delay: -0.6s">Headshot/bust/Bloons ~ $25</b><br />
