--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
 		</h1>
 		<div class="container">
 			All artwork examples are from 2024!<br />
-			Commissions are currently <span style="color: #ff7fbf">closed, so please don't enquire at this time!</span>!<br />
+			Commissions are currently <span style="color: #ff7fbf">closed</span>, so please don't enquire at this time!<br />
 			All prices are in USD, DM me on any <a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">social platform</a> if you're interested!<br />
 			<br />
 			<b class="rainbow" style="font-size: 24px; animation-delay: -0.6s">Headshot/bust/Bloons ~ $25</b><br />
