I forgot how to do this ngl

--- a/index.html
+++ b/index.html
@@ -1508,6 +1508,7 @@ const STYLES = [
 "Tobi.webp"
 "Together.webp"
 "Tokiboki.webp"
+"Touch_the_Sky.webp"
 "Winter_Solstice.webp"
 "Xaiden.webp"
 "Zap_Yourself_NOW.webp"
@@ -1554,6 +1555,9 @@ const STYLES = [
 "JAWS.avif"
 "Silli_Mlep.avif"
 "Silli_Mlep_Rainbow.avif"
+"Smiler_Gif_1.avif"
+"Smiler_Gif_2.avif"
+"Smiler_Gif_3.avif"
 "Smudge_1.avif"
 "Smudge_2.avif"
 "Tessin_1.avif"
