--- a/index.html
+++ b/index.html
@@ -1545,6 +1545,7 @@ const STYLES = [
 "Vegeta_Sprite_9_BG.webp"
 "Vegeta_Sprite_10_BG.webp"
 "Vegeta_Sprite_11_BG.webp"
+"Bloonstones_3.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
