--- a/index.html
+++ b/index.html
@@ -1698,7 +1698,8 @@ Misc
 - Animation Memes
 - Build-a-Bear
 - Fursuit Dances
-- LEGO Mythica
+- Horse Riding & Care
+- LEGO Franchises
 - LEGO Sonic the Hedgehog
 - Plushie Collecting!!!
 - Roller Coasters
