add tetra stamps

--- a/index.html
+++ b/index.html
@@ -1273,6 +1273,11 @@ const STAMPS = `
 "tumblr_fccdc2606c29e856d58473833b4ddb82_aa305342_100.webp"
 "tumblr_fe2c2f3ca2c690ea71ff6b6cdc3f8cdd_2a18a216_100.webp"
 "tumblr_ff1d42b156881a70c48e6b03631ddb5c_6a26b4f0_100.webp"
+"tumblr_118d7d5d056a928a738033b54380cffd_c9069a6c_500.webp"
+"tumblr_d3e4911e33afacb61d408517c651bea6_87f86eff_500.webp"
+"tumblr_de7dca64087a1f7edd81c196a6b7fefb_69065524_400.webp"
+"tumblr_610cd57266d0eddb5ad14e4ad3d734f6_fd8ad068_400.webp"
+"tumblr_e0f91ea56f7a1f200c7f0a5fe4ae6ccd_1392f4de_640.webp"
 "vehicle-vehicular-manslaughter...23A22https3A2F2Ftenor.gif"
 "world-so-scary-mononykus.gif"
 "2024-04-02_18-54-10.gif"
