--- a/index.html
+++ b/index.html
@@ -1445,6 +1445,7 @@ const STYLES = [
 "Joy_in_the_Cretaceous.avif"
 "Making_SMore_Memories.avif"
 "Snowdrop.avif"
+"Tewbre_Movies_PFP.avif"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1453,6 +1454,7 @@ const STYLES = [
 		images: `
 "Arobas.webp"
 "Astro.webp"
+"Beach_Stroll.webp"
 "Besties.webp"
 "Blep.webp"
 "Cameramaxxing.webp"
@@ -1465,11 +1467,13 @@ const STYLES = [
 "Depths.webp"
 "Deteriorating.webp"
 "Distortion_No_Logo.webp"
+"Droplet_in_the_Rain.webp"
 "Ellabell.webp"
 "Filled_With_Whimsy_and_Grace.webp"
 "Fin..webp"
 "Foxo_Duo.webp"
 "Hoshikage.webp"
+"I'll_Getcha!.webp"
 "ICE-CREAM_MONSTER.webp"
 "It'll_Be_Ok.webp"
 "Intergalactic_Mayonnaise.webp"
@@ -1477,6 +1481,7 @@ const STYLES = [
 "Kittydog_Patch_w.webp"
 "Lets_Go.webp"
 "Lightning_Spirit.webp"
+"Long_for_Your_Goodbye.webp"
 "Love_in_the_Stars_w.webp"
 "Lyki.webp"
 "Man..webp"
