--- a/index.html
+++ b/index.html
@@ -1519,6 +1519,7 @@ const STYLES = [
 "Together.webp"
 "Tokiboki.webp"
 "Touch_the_Sky.webp"
+"Up_Top.webp"
 "Winter_Solstice.webp"
 "Xaiden.webp"
 "Zap_Yourself_NOW.webp"
