--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
 			}
 			50% {
 				opacity: 0.5;
-				transform: translate(0px, -5px) scale(1.5);
+				transform: translate(0px, -5px) scale(1.3);
 			}
 		}
 		.soft-edge {
@@ -768,9 +768,9 @@
 		.soft-edge:hover {
 			outline: 2px solid white;
 			box-shadow:
-				0px 0px 64px rgba(0, 255, 255, 255),
-				0px 0px 48px rgba(127, 255, 255, 255),
-				0px 0px 32px rgba(255, 255, 255, 255);
+				0px 0px 48px rgba(0, 255, 255, 255),
+				0px 0px 32px rgba(127, 255, 255, 255),
+				0px 0px 24px rgba(255, 255, 255, 255);
 			mask-image: none;
 			-webkit-mask-box-image: none;
 			z-index: 10;
@@ -2049,8 +2049,9 @@ function lineIntersectsLine(l1Start, l1End, l2Start, l2End) {
 	return (0 < lambda && lambda < 1) && (0 < gamma && gamma < 1);
 }
 
-const stampWidth = 96;
-const stampHeight = 64;
+const stampScale = 1.5;
+const stampWidth = Math.ceil(96 / stampScale);
+const stampHeight = Math.ceil(64 / stampScale);
 const stampDelay = 1000;
 
 const stampsToReuse = [];
@@ -2211,6 +2212,7 @@ function spawnStamp(parent, mode, rowIndex) {
 		}
 		stamp.crossOrigin = "anonymous";
 		stamp.className = 'stamp';
+		stamp.style.transformOrigin = 'top left';
 		[url, isAnim] = generateURL();
 		stamp.src = url;
 	}
@@ -2321,7 +2323,7 @@ function spawnStamp(parent, mode, rowIndex) {
 			}
 			const x2 = Math.round(x1);
 			const y2 = Math.round(y1);
-			transforms.push({ transform: `translate(${x2}px, ${y2}px)` });
+			transforms.push({ transform: `translate(${x2}px, ${y2}px) scale(${stampScale})` });
 			time += frameSkip;
 			x1 += mx * frameSkip;
 			y1 += my * frameSkip + 0.5 * gravity * frameSkip * frameSkip;
@@ -2378,7 +2380,7 @@ function spawnStampCarriage() {
 	for (const [b, bar] of [leftBar, rightBar].entries()) {
 		if (!isVisible(bar)) continue;
 		const rect = bar.getBoundingClientRect();
-		const maxRowSpawned = Math.min(stampRowSpawned, rect.height / stampHeight);
+		const maxRowSpawned = Math.min(stampRowSpawned, rect.height / stampHeight / stampScale);
 		const lrDirection = (currentOffset & 1) ^ b
 		let carriage;
 		if (carriagesToReuse.length) {
@@ -2398,15 +2400,16 @@ function spawnStampCarriage() {
 			carriagesToReuse.push(carriage);
 		}
 		bar.appendChild(carriage);
-		const lrStart = lrDirection ? rect.width : -stampWidth;
-		const lrEnd = lrDirection ? -stampWidth : rect.width;
+		const lrStart = lrDirection ? rect.width : -stampWidth * stampScale;
+		const lrEnd = lrDirection ? -stampWidth * stampScale : rect.width;
 		const lrDistance = lrStart - lrEnd;
-		const lrDuration = Math.abs(lrDistance) / stampWidth * stampDelay;
+		const lrDuration = Math.abs(lrDistance) / stampWidth * stampDelay / stampScale;
 		carriage.end = currentTime + nDelay + lrDuration;
-		carriage.style.transform = `translateX(${lrStart}px)`;
+		carriage.style.transformOrigin = 'top left';
+		carriage.style.transform = `translateX(${lrStart}px) scale(${stampScale})`;
 		const animation = carriage.animate([
-			{ transform: `translateX(${lrStart}px)` },
-			{ transform: `translateX(${lrEnd}px)` }
+			{ transform: `translateX(${lrStart}px) scale(${stampScale})` },
+			{ transform: `translateX(${lrEnd}px) scale(${stampScale})` }
 		], {
 			easing: 'linear',
 			duration: lrDuration,
@@ -4161,6 +4164,7 @@ function setupGallery() {
 				image.isCloud = j;
 				image.style.display = 'none';
 				image.setAttribute('loading', 'lazy');
+				image.style.transformOrigin = 'top left';
 				const url2 = replaceIOS(url);
 				image.src = url2;
 				image.osrc = url2;
@@ -4202,8 +4206,8 @@ function setupGallery() {
 					const originalWidth = image.naturalWidth;
 					const originalHeight = image.naturalHeight;
 					const aspectRatio = originalWidth / originalHeight;
-					const newHeight = Math.sqrt(image.desiredArea / aspectRatio);
-					const newWidth = newHeight * aspectRatio;
+					let newHeight = Math.sqrt(image.desiredArea / aspectRatio) / image.scale;
+					let newWidth = newHeight * aspectRatio;
 
 					if (style.animated && !image.isCloud) {
 						const tempCanvas = document.createElement('canvas');
@@ -4221,6 +4225,7 @@ function setupGallery() {
 					} else {
 						image.className = 'soft-edge';
 					}
+					image.style.transform = `scale(${image.scale})`;
 					image.style.willChange = 'transform';
 					debouncedGalleryScroll();
 				});
@@ -4248,12 +4253,13 @@ function setupGallery() {
 						scale = Math.random() + 0.5;
 					}
 					image.scrollSpeed = scale;
+					image.scale = image.isCloud ? 4 : 2;
 					image.style.display = 'none';
 					image.style.visibility = 'hidden';
 					image.style.opacity = '0';
 					image.style.clipPath = 'none';
 					image.isVisible = false;
-					image.desiredArea = imageScale * imageScale * scale;
+					image.desiredArea = imageScale * imageScale;
 					image.onload();
 					const r = imageSep / window.innerWidth * 3;
 					let x;
@@ -4313,9 +4319,9 @@ function startImageFloating() {
 			const hy = y - m;
 			const ly = y + m;
 			const animation = image.animate([
-				{ transform: `translate(${x}px, ${hy}px)`, easing: 'cubic-bezier(0.45, 0.05, 0.55, 0.95)' },
-				{ transform: `translate(${x}px, ${ly}px)`, easing: 'cubic-bezier(0.45, 0.05, 0.55, 0.95)' },
-				{ transform: `translate(${x}px, ${hy}px)`, easing: 'cubic-bezier(0.45, 0.05, 0.55, 0.95)' }
+				{ transform: `translate(${x}px, ${hy}px) scale(${image.scale})`, easing: 'cubic-bezier(0.45, 0.05, 0.55, 0.95)' },
+				{ transform: `translate(${x}px, ${ly}px) scale(${image.scale})`, easing: 'cubic-bezier(0.45, 0.05, 0.55, 0.95)' },
+				{ transform: `translate(${x}px, ${hy}px) scale(${image.scale})`, easing: 'cubic-bezier(0.45, 0.05, 0.55, 0.95)' }
 			], {
 				duration: d,
 				iterations: Infinity,
@@ -4380,7 +4386,7 @@ function updateGalleryScroll(cancelAfter) {
 					image.reset();
 					return;
 				}
-				const width = image.width || image.getBoundingClientRect().width;
+				const width = image.width * image.scale || image.getBoundingClientRect().width;
 				if (!image.isVisible) {
 					image.style.display = 'block';
 					image.isVisible = true;
@@ -4393,13 +4399,15 @@ function updateGalleryScroll(cancelAfter) {
 				const x = image.offsetX * (rect.width - width) + rect.x;
 				const y = (top - start) * image.scrollSpeed;
 				image.lastTransform = [x, y];
-				image.style.transform = `translate(${x}px, ${y}px)`;
+				image.style.transform = `translate(${x}px, ${y}px) scale(${image.scale})`;
 				if (x < rect.x) {
 					const p = Math.floor(rect.x - x) / width * 100;
 					image.style.clipPath = `inset(0% 0% 0% ${p}%)`;
 				} else if (x + width > rect.x + rect.width) {
 					const p = Math.ceil(x + width - rect.x - rect.width) / width * 100;
 					image.style.clipPath = `inset(0% ${p}% 0% 0%)`;
+				} else {
+					image.style.clipPath = 'none';
 				}
 			});
 		});
