I can do this myself lol

--- a/index.html
+++ b/index.html
@@ -1070,11 +1070,11 @@
 			<div class="bullet"></div>
 		</h1>
 		<div class="container">
-			All artwork examples are from 2024!<br />
+			All artwork examples are updated yearly, and currently all from 2025!<br />
 			Commissions are currently <span style="color: #ff7fbf">closed</span>, so please don't enquire at this time!<br />
 			All prices are in USD, DM me on any <a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">social platform</a> if you're interested!<br />
 			<br />
-			<b class="rainbow" style="font-size: 24px; animation-delay: -0.6s">Headshot/bust/Bloons ~ $25</b><br />
+			<b class="rainbow" style="font-size: 24px; animation-delay: -0.6s">Headshot/bust ~ $25</b><br />
 			<b class="rainbow" style="font-size: 24px; animation-delay: -0.3s">Half body ~ $40</b><br />
 			<b class="rainbow" style="font-size: 24px; animation-delay: -0.0s">Full body ~ $65</b><br />
 			<b style="color: #bf7fff; text-shadow: 0 0 2px #ffbfff">(Additional character is $10 extra)</b>
