--- a/index.html
+++ b/index.html
@@ -1686,6 +1686,7 @@ Non-Anime Shows & Movies
 - Gravity Falls
 - Inception
 - Interstellar
+- Jack Stauber
 - Lego Monkie Kid
 - Murder Drones
 - My Little Pony: A New Generation
