tbh this needed a 2025 update too

--- a/index.html
+++ b/index.html
@@ -1508,9 +1508,7 @@ Bands/Singers
 - Coldplay
 - Crown the Empire
 - Crush40
-- DECO*27
 - DM Dokuro
-- Dream
 - EDEN
 - EmuEmi
 - Femtanyl
@@ -1518,8 +1516,8 @@ Bands/Singers
 - Guns N' Roses
 - Hans Zimmer
 - Hatsune Miku
-- Imagine Dragons
 - Jellyrox
+- Joji
 - kittydoggo
 - Lanaurii
 - Laura Shigihara
@@ -1529,7 +1527,6 @@ Bands/Singers
 - My Little Pony songs
 - Panic! at the Disco
 - Queen
-- Rob Lea
 - Set It Off
 - Skillet
 - Sonic the Hedgehog songs
@@ -1563,9 +1560,10 @@ Games
 - Placid Plastic Duck Simulator
 - Pokémon GO
 - Pokémon Legends
+- Pokémon Mainline Games
 - Pokémon Mystery Dungeon
 - Pokémon Sleep
-- Pokémon Mainline Games
+- Pokémon Trading Card Game Pocket
 - Rain World
 - Sigmund Corp. Series
 - Silent Hill 2
@@ -1606,9 +1604,7 @@ Non-Anime Shows & Movies
 - Zootopia
 Misc
 - Animation Memes
-- Build-a-Bear
 - Fursuit Dances
-- LEGO Franchises
 - LEGO Sonic the Hedgehog
 - Plushie Collecting!!!
 - Roller Coasters
