lavender and yapping

--- a/index.html
+++ b/index.html
@@ -1460,6 +1460,7 @@ const STYLES = [
 "Bad_Dog.webp"
 "Dancing_Under_the_Aurora.webp"
 "In_Torpor.webp"
+"Lavender.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
@@ -1473,6 +1474,7 @@ const STYLES = [
 "Left_Right_Left_Right.avif"
 "Milk_Singing.avif"
 "Silli_Chibi.avif"
+"Silli_Yapping_1.avif"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		animated: true,
 		shuffle: false
