how on earth did I forget them

--- a/index.html
+++ b/index.html
@@ -1514,12 +1514,15 @@ Bands/Singers
 - EDEN
 - EmuEmi
 - Femtanyl
+- Frizk
 - Fox Stevenson
 - Guns N' Roses
 - Hans Zimmer
 - Hatsune Miku
+- ivycomb
 - Jellyrox
 - Joji
+- kennyoung
 - kittydoggo
 - Lanaurii
 - Laura Shigihara
