--- a/index.html
+++ b/index.html
@@ -1461,6 +1461,7 @@ const STYLES = [
 "Dancing_Under_the_Aurora.webp"
 "In_Torpor.webp"
 "Lavender.webp"
+"Silli_Beg.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
