--- a/index.html
+++ b/index.html
@@ -1450,6 +1450,7 @@ const STYLES = [
 		images: `
 "Chill_Winter_Days.webp"
 "Starlette.webp"
+"Glitter_AT.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
