--- a/index.html
+++ b/index.html
@@ -1442,6 +1442,7 @@ const STYLES = [
 		images: `
 "Tewbre_Roblox_Banner.webp"
 "Tewbre_Roblox.webp"
+Tewbre_Movies_Banner_Cropped.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
