--- a/index.html
+++ b/index.html
@@ -1533,6 +1533,7 @@ Bands/Singers
 - My Chemical Romance
 - My Little Pony songs
 - Panic! at the Disco
+- Porter Robinson
 - Queen
 - Set It Off
 - Skillet
