me when I misgender

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
 	<div id="content" class="sub-anim">
 		<h1 id="titles" class="heading">
 			<div class="bullet"></div><span>Coco</span>
-			<div class="bullet"></div><span>they/all</span>
+			<div class="bullet"></div><span>they/them</span>
 			<div class="bullet"></div><span>non-binary</span>
 			<div class="bullet"></div><span>non-theistic</span>
 			<div class="bullet"></div>
