oh yeah wanted to remove this bc should be more formal

--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
 					Show me things or ask for feedback on your art, I don't mind! :3<br />
 					Use my art or draw my characters, just so long as you give credit and don't repost my art places for your own clout!<br />
 					Drawing my OCs interacting with your OCs, if you think your characters would be friends with any of mine please go ahead, I'd love to see it!<br />
-					用中文和我聊天儿吧，我在学这个语言，会尽力的！中文俚语也没问题，不过如果我听起来有点冷请多包涵！（）
+					用中文和我聊天儿吧，我在学这个语言，会尽力的！中文俚语也没问题，不过如果我听起来有点冷请多包涵！
 				</div>
 			</div>
 			<div class="paragraph ripples" style="animation-delay: -0.75s">
