forgor them too

--- a/index.html
+++ b/index.html
@@ -1534,6 +1534,7 @@ Bands/Singers
 - My Chemical Romance
 - My Little Pony songs
 - Panic! at the Disco
+- Porter Robinson
 - Queen
 - Set It Off
 - Skillet
