--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@ Anime
 - Another
 - Beastars
 - Death Note
-- Dragon Ball Z
+- Dragon Ball Z franchise
 - Lucky Star
 - Naruto
 - Pokémon Horizons
@@ -1516,6 +1516,7 @@ Bands/Singers
 - DM Dokuro
 - EDEN
 - EmuEmi
+- Frank Sinatra
 - Femtanyl
 - Frizk
 - Fox Stevenson
@@ -1531,6 +1532,7 @@ Bands/Singers
 - Laura Shigihara
 - Learke
 - Linkin Park
+- Michael Jackson
 - My Chemical Romance
 - My Little Pony songs
 - Panic! at the Disco
