--- a/index.html
+++ b/index.html
@@ -1452,6 +1452,9 @@ const STYLES = [
 "Chill_Winter_Days.webp"
 "Starlette.webp"
 "Glitter_AT.webp"
+"Fwoofy Art 1.webp"
+"Fwoofy Art 2.webp"
+"Kali Says Hi!.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1464,6 +1467,7 @@ const STYLES = [
 "In_Torpor.webp"
 "Lavender.webp"
 "Silli_Beg.webp"
+"Soar the Skies!.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
