--- a/index.html
+++ b/index.html
@@ -1455,6 +1455,7 @@ const STYLES = [
 "Fwoofy Art 1.webp"
 "Fwoofy Art 2.webp"
 "Kali Says Hi!.webp"
+"Primal Summit.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
