--- a/index.html
+++ b/index.html
@@ -3443,7 +3443,12 @@ function animateUpdate() {
 
 	if (isVisible(rightBar)) {
 		allParticles = document.getElementsByClassName('trail');
-		const yeetAllStamps = leftRain.held || rightRain.held;
+		let yeetAllStamps = leftRain.held || rightRain.held;
+		let blackHoleYeet = false;
+		if (!yeetAllStamps && blackHole.radius >= 16) {
+			yeetAllStamps = true;
+			blackHoleYeet = true;
+		}
 		if (yeetAllStamps && (leftRain.held < 2 && rightRain.held < 2)) {
 			leftRain.held = 0;
 			rightRain.held = 0;
@@ -3451,9 +3456,25 @@ function animateUpdate() {
 		const scrollStamps = document.getElementsByClassName('stamp');
 		if (yeetAllStamps) {
 			for (const stamp of scrollStamps) {
+				if (blackHoleYeet && Math.random() * 128 > blackHole.radius) continue;
 				if (isYeetable(stamp, currentTime)) {
-					mx = stamp.mode == 'right' ? -1 : 1;
-					stamp.yeet((Math.random() * 3 + 1) * mx * 16, (Math.random() - 1) * 4);
+					if (blackHoleYeet) {
+						const rect = stamp.getBoundingClientRect();
+						const x = rect.x + rect.width / 2;
+						const y = rect.y + rect.height / 2;
+						const dx = blackHole.posX - x;
+						const dy = blackHole.posY - y;
+						const g = blackHole.radius * blackHole.radius * blackHole.radius / 4096;
+						const d = dx * dx + dy * dy;
+						if (d > Math.random() * g * g / 4) continue;
+						const z = Math.atan2(dy, dx);
+						const dist = Math.sqrt(d) / 4;
+						stamp.yeet(Math.cos(z) * g / dist, Math.sin(z) * g / dist - 4);
+					}
+					else {
+						mx = stamp.mode == 'right' ? -1 : 1;
+						stamp.yeet((Math.random() * 3 + 1) * mx * 16, (Math.random() - 1) * 4);
+					}
 				}
 			}
 		}
@@ -3536,7 +3557,7 @@ function animateUpdate() {
 	updateCanvas();
 	requestAnimationFrame(animateUpdate);
 }
-const starExit = 300;
+const starExit = 400;
 function updateCanvas() {
 	if (!camera || !scene || !renderer) return;
 	const timestamp = Date.now();
@@ -3546,87 +3567,108 @@ function updateCanvas() {
 	const cols2 = [];
 	const removed = [];
 	const rect = starContainer.getBoundingClientRect();
+	const radius = Math.max(blackHole.radius, 0);
+	const gravity = 1000000 * (1 + radius * radius * radius / 4096);
+	const x = blackHole.radius > 0 ? blackHole.posX : mouseX;
+	const y = blackHole.radius > 0 ? blackHole.posY : mouseY
 	shootingStars.forEach((star) => {
-		const mx = (mouseX - rect.x) / rect.width * window.innerWidth;
-		const my = (mouseY - rect.y) / rect.height * window.innerHeight;
+		const mx = (x - rect.x) / rect.width * window.innerWidth;
+		const my = (y - rect.y) / rect.height * window.innerHeight;
 		const elapsed = (timestamp - star.timestamp) / 1000;
 		const delay = (timestamp - star.prev) / 1000;
 		star.prev = timestamp;
+		const trail = star.trail;
+		if (!star.eaten) {
+			let rem = delay;
+			let steps = 0;
+			while (rem > 0) {
+				let dd = rem;
+				// Verlet integration for smooth gravity simulation
+				// Mouse cursor is arbitrarily given a gravity of 1 million units
+				let ax;
+				let ay;
+				{
+					const dx = mx - star.x;
+					const dy = my - star.y;
+					const z = Math.atan2(dy, dx);
+					const r2 = 1 + dx * dx + dy * dy - radius;
+					if (r2 <= 0) {
+						star.eaten++;
+						break;
+					}
 
-		let rem = delay;
-		let steps = 0;
-		while (rem > 0) {
-			let dd = rem;
-			// Verlet integration for smooth gravity simulation
-			// Mouse cursor is arbitrarily given a gravity of 1 million units
-			let ax;
-			let ay;
-			{
-				const dx = mx - star.x;
-				const dy = my - star.y;
-				const z = Math.atan2(dy, dx);
-				const r2 = 1 + dx * dx + dy * dy;
+					const v2 = 1 + star.vx * star.vx + star.vy * star.vy;
+					// Adaptive timestep
+					dd = Math.min(dd, Math.sqrt(r2) / Math.sqrt(v2) / 64 / Math.max(1, radius / 4));
 
-				const v2 = 1 + star.vx * star.vx + star.vy * star.vy;
-				// Adaptive timestep
-				dd = Math.min(dd, Math.sqrt(r2) / Math.sqrt(v2) / 64);
+					ax = gravity * Math.cos(z) / r2;
+					ay = gravity * Math.sin(z) / r2;
+				}
 
-				ax = 1000000 * Math.cos(z) / r2;
-				ay = 1000000 * Math.sin(z) / r2;
+				star.x += star.vx * dd + 0.5 * ax * dd * dd;
+				star.y += star.vy * dd + 0.5 * ay * dd * dd;
+
+				if (star.x < -starExit || star.y < -starExit || star.x > window.innerWidth + starExit || star.y > window.innerHeight + starExit) {
+					removed.push(star.timestamp);
+					return;
+				}
+
+				let ax2;
+				let ay2;
+				{
+					const dx = mx - star.x;
+					const dy = my - star.y;
+					const z = Math.atan2(dy, dx);
+					const r2 = 1 + dx * dx + dy * dy - radius;
+					if (r2 <= 0) {
+						star.eaten++;
+						break;
+					}
+					ax2 = gravity * Math.cos(z) / r2;
+					ay2 = gravity * Math.sin(z) / r2;
+				}
+
+				star.vx += 0.5 * (ax + ax2) * dd;
+				star.vy += 0.5 * (ay + ay2) * dd;
+
+				if (Number.isInteger(Math.sqrt(steps))) {
+					const px = (star.x / window.innerWidth) * 2 - 1;
+					const py = -(star.y / window.innerHeight) * 2 + 1;
+					const vector = new THREE.Vector3(px, py, 0);
+					vector.unproject(camera);
+					star.trail.push([vector.x, vector.y, vector.z]);
+					star.times.push(timestamp);
+				}
+				steps++;
+				rem -= dd;
 			}
-
-			star.x += star.vx * dd + 0.5 * ax * dd * dd;
-			star.y += star.vy * dd + 0.5 * ay * dd * dd;
-
-			if (star.x < -starExit || star.y < -starExit || star.x > window.innerWidth + starExit || star.y > window.innerHeight + starExit) {
+			const speed = Math.sqrt(star.vx * star.vx + star.vy * star.vy);
+			const maxLength = 256;
+			while (trail.length > maxLength || timestamp - star.times[0] > 500) {
+				trail.shift();
+				star.times.shift();
+			}
+		} else {
+			star.eaten++;
+			const skip = Math.max(1, trail.length / 16);
+			if (star.eaten * skip >= trail.length - 1) {
 				removed.push(star.timestamp);
 				return;
 			}
-
-			let ax2;
-			let ay2;
-			{
-				const dx = mx - star.x;
-				const dy = my - star.y;
-				const z = Math.atan2(dy, dx);
-				const r2 = 1 + dx * dx + dy * dy;
-				ax2 = 1000000 * Math.cos(z) / r2;
-				ay2 = 1000000 * Math.sin(z) / r2;
-			}
-
-			star.vx += 0.5 * (ax + ax2) * dd;
-			star.vy += 0.5 * (ay + ay2) * dd;
-
-			if (Number.isInteger(Math.sqrt(steps))) {
-				const px = (star.x / window.innerWidth) * 2 - 1;
-				const py = -(star.y / window.innerHeight) * 2 + 1;
-				const vector = new THREE.Vector3(px, py, 0);
-				vector.unproject(camera);
-				star.trail.push([vector.x, vector.y, vector.z]);
-				star.times.push(timestamp);
-			}
-			steps++;
-			rem -= dd;
 		}
 		const speed = Math.sqrt(star.vx * star.vx + star.vy * star.vy);
-		const trail = star.trail;
-		const maxLength = 256;
-		while (trail.length > maxLength || timestamp - star.times[0] > 500) {
-			trail.shift();
-			star.times.shift();
-		}
 
 		// Terraria Rainbow Rod effect; create a pentagon at the head, trapezoids at each body, and triangle at the tail
 		// Trail effect has a layered glow for 1/3 of the length
 		const skip = Math.max(1, trail.length / 16);
 		const width = star.scale / 1024 * sceneResMult;
-		const glow = Math.sqrt(speed) / star.scale / 6;
+		const glow = Math.cbrt(speed) / star.scale / 3;
 		const glowStart = 1 / 3;
-		for (let i = 0; i < trail.length - 1; i += skip) {
-			const ii = Math.floor(i);
+		for (let i = star.eaten * skip; i < trail.length - 1; i += skip) {
+			const ii = Math.floor(i - star.eaten);
 			const tailIndex = ii;
-			const headIndex = Math.min(Math.floor(i + skip), trail.length - 1);
-			const nextIndex = Math.floor(i + skip * 2);
+			const headIndex = Math.min(Math.floor((i - star.eaten) + skip), trail.length - 1);
+			const nextIndex = Math.floor((i - star.eaten) + skip * 2);
 			const inFront = headIndex >= trail.length - skip;
 			const [tx, ty, tz] = trail[tailIndex];
 			const [hx, hy, hz] = trail[headIndex];
@@ -3776,6 +3818,7 @@ function generateStars() {
 			y: -150,
 			vx: (Math.random() * 15 - 120) * scale,
 			vy: (Math.random() * 40 + 320) * scale,
+			eaten: 0,
 			trail: [],
 			times: []
 		}
@@ -3804,7 +3847,11 @@ function generateStars() {
 			};
 		}
 	}
-	setTimeout(generateStars, Math.random() * 400 + 200);
+	let starDelay = Math.random() * 400 + 200;
+	if (blackHole.radius > 0) {
+		starDelay /= Math.max(1, Math.cbrt(blackHole.radius / 4));
+	}
+	setTimeout(generateStars, starDelay);
 }
 
 const tessVerts = [
@@ -4715,6 +4762,63 @@ function setupRipples() {
 	}
 }
 setupRipples();
+
+const blackHole = document.createElement('img');
+blackHole.style.position = 'fixed';
+blackHole.style.zIndex = '99';
+blackHole.src = "https://cocobeanzies.mizabot.xyz/pictures/black_hole.webp"
+blackHole.style.display = 'none';
+blackHole.style.height = '128px';
+blackHole.posX = 0;
+blackHole.posY = 0;
+blackHole.size = 0;
+blackHole.radius = 0;
+blackHole.rotation = 0;
+document.body.appendChild(blackHole)
+
+function updateBlackHole() {
+	blackHole.style.display = 'block';
+	blackHole.style.left = `${blackHole.posX}px`;
+	blackHole.style.top = `${blackHole.posY}px`;
+	if (HOLDING) {
+		blackHole.posX = (blackHole.posX * 7 + mouseX) / 8;
+		blackHole.posY = (blackHole.posY * 7 + mouseY) / 8;
+		const rotation = mouseV[0];
+		blackHole.rotation = Math.max(-45, Math.min(45, blackHole.rotation * 0.99 + rotation / 10));
+	}
+	if (blackHole.size > 256) blackHole.size = 256;
+	const size = Math.sqrt(blackHole.size) / 16;
+	blackHole.radius = size * 128;
+	blackHole.style.opacity = Math.min(0.9, size * 3);
+	blackHole.style.transform = `translate(-50.5%, -52%) scale(${size}) rotate(${blackHole.rotation}deg)`;
+}
+
+var HOLDING = false;
+window.onmousedown = () => {
+	blackHole.posX = mouseX;
+	blackHole.posY = mouseY;
+	HOLDING = true;
+	function func() {
+		if (HOLDING) {
+			blackHole.size = Math.max(blackHole.size + 1, 1);
+			updateBlackHole();
+			requestAnimationFrame(func)
+		} else {
+			blackHole.size -= 1;
+			if (blackHole.size <= 0) {
+				blackHole.style.display = 'none';
+				blackHole.radius = 0;
+			} else {
+				updateBlackHole();
+				requestAnimationFrame(func)
+			}
+		}
+	}
+	requestAnimationFrame(func);
+}
+window.onmouseup = () => {
+	HOLDING = false;
+}
 
 const MINHEIGHT = Number.parseFloat(window.getComputedStyle(document.body).height);
 // document.body.style.height = MINHEIGHT;
