I think that was all

--- a/index.html
+++ b/index.html
@@ -1456,6 +1456,9 @@ const STYLES = [
 "Fwoofy Art 2.webp"
 "Kali Says Hi!.webp"
 "Primal Summit.webp"
+"Colour Splash!.webp"
+"Funfetti!.webp"
+"Running.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1469,6 +1472,8 @@ const STYLES = [
 "Lavender.webp"
 "Silli_Beg.webp"
 "Soar the Skies!.webp"
+"Patch Base .webp"
+"Sillii Silly Femboy.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
