Fizzled it down :3

--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,8 @@ Anime
 - Another
 - Beastars
 - Death Note
-- Dragon Ball Z franchise
+- Dragon Ball
+- Dragon Ball Z + spinoffs
 - Lucky Star
 - Naruto
 - Pokémon Horizons
@@ -1512,35 +1513,23 @@ Anime
 - Pokémon Series: Black & White
 - Pokémon Series: XYZ
 - Sonic X
-- Studio Ghibli
 - Tokyo Ghoul
 Bands/Singers
 - Arrows to Athens
-- Bentley Jones
 - Bring Me The Horizon
-- Caleb Hyles
-- CG5
 - Coldplay
 - Crown the Empire
 - Crush40
 - DM Dokuro
 - EDEN
-- EmuEmi
-- Frank Sinatra
 - Femtanyl
-- Frizk
-- Fox Stevenson
 - Guns N' Roses
-- Hans Zimmer
-- Hatsune Miku
+- Hatsune Miku artists
 - Hyper Potions
-- ivycomb
+- Jack Stauber
 - Jellyrox
-- Joji
 - kennyoung
 - kittydoggo
-- Lanaurii
-- Laura Shigihara
 - Learke
 - Linkin Park
 - Michael Jackson
@@ -1548,20 +1537,15 @@ Bands/Singers
 - My Little Pony songs
 - Panic! at the Disco
 - Porter Robinson
-- Queen
 - Set It Off
 - Skillet
 - Sonic the Hedgehog songs
-- suzie
-- Thousand Foot Krutch
-- TryHardNinja
 - WavePlasma :3
 - YonKaGor
 - ZUTOMAYO
 - 周杰倫 Jay Chou
 Games
 - Animal Crossing
-- Bloons Card Storm
 - Bloons Monkey City
 - Bloons POP!
 - Bloons TD6
@@ -1569,14 +1553,11 @@ Games
 - Cuphead
 - Deltarune
 - Five Nights at Freddy's
-- Geometry Dash
 - Hollow Knight
-- Insaniquarium
 - Inscryption
 - Little Kitty, Big City
 - Minecraft
 - Muse Dash
-- Neko Atsume
 - Night in the Woods
 - Oneshot
 - Overcooked! 2
@@ -1589,33 +1570,26 @@ Games
 - Pokémon Trading Card Game Pocket
 - Rain World
 - Sigmund Corp. Series
-- Silent Hill 2
 - Sonic the Hedgehog
 - Stray
 - Terraria
-- Terraria Calamity
 - Undertale
 - Wobbledogs
 Non-Anime Shows & Movies
-- Adventure Time
 - Bluey
 - Gravity Falls
-- Inception
 - Interstellar
-- Jack Stauber
 - Lego Monkie Kid
 - Murder Drones
 - My Little Pony: A New Generation
 - My Little Pony: Friendship is Magic
 - My Little Pony: Make Your Mark
-- Regular Show
 - Sonic Prime
 - Sonic SatAM
 - Sonic the Hedgehog Paramount Movies
 - Sonic Underground
 - SpongeBob Squarepants
 - Steven Universe
-- Terminator
 - The Adventures of Sonic the Hedgehog
 - The Amazing Digital Circus
 - The Amazing World of Gumball
@@ -1628,11 +1602,10 @@ Non-Anime Shows & Movies
 Misc
 - Animation Memes
 - Fursuit Dances
-- LEGO Sonic the Hedgehog
-- Plushie Collecting!!!
+- LEGO
+- Plushie and Toys Collecting
 - Roller Coasters
 - Science & Computer Science
-- Sonic Figurines Collecting!!!
 - Space
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length });
 const INTERESTS = {};
