--- a/index.html
+++ b/index.html
@@ -1556,18 +1556,16 @@ Games
 - Hollow Knight
 - Inscryption
 - Little Kitty, Big City
+- Mario franchise
 - Minecraft
 - Muse Dash
 - Night in the Woods
 - Oneshot
-- Overcooked! 2
 - Placid Plastic Duck Simulator
-- Pokémon GO
 - Pokémon Legends
 - Pokémon Mainline Games
+- Pokémon Mobile Games
 - Pokémon Mystery Dungeon
-- Pokémon Sleep
-- Pokémon Trading Card Game Pocket
 - Rain World
 - Sigmund Corp. Series
 - Sonic the Hedgehog
