--- a/index.html
+++ b/index.html
@@ -1536,11 +1536,11 @@ Bands/Singers
 - My Chemical Romance
 - My Little Pony songs
 - Panic! at the Disco
-- Pokémon songs/music
+- Pokémon songs + music
 - Porter Robinson
 - Set It Off
 - Skillet
-- Sonic the Hedgehog songs/music
+- Sonic the Hedgehog songs + music
 - WavePlasma :3
 - YonKaGor
 - 周杰倫 Jay Chou
