--- a/index.html
+++ b/index.html
@@ -1459,6 +1459,7 @@ const STYLES = [
 "Colour Splash!.webp"
 "Funfetti!.webp"
 "Running.webp"
+"Flying.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
