--- a/index.html
+++ b/index.html
@@ -1475,6 +1475,7 @@ const STYLES = [
 "Soar the Skies!.webp"
 "Patch Base.webp"
 "Sillii Silly Femboy.webp"
+"Dancing in the Hues.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
