--- a/index.html
+++ b/index.html
@@ -1525,6 +1525,7 @@ Bands/Singers
 - DM Dokuro
 - EDEN
 - Femtanyl
+- Grandson
 - Guns N' Roses
 - Hatsune Miku artists
 - Hyper Potions
@@ -1604,6 +1605,7 @@ Misc
 - Fursuit Dances
 - LEGO
 - Plushie and Toys Collecting
+- Pokémon Shiny Hunting
 - Roller Coasters
 - Science & Computer Science
 - Space
