--- a/index.html
+++ b/index.html
@@ -1460,6 +1460,7 @@ const STYLES = [
 "Funfetti!.webp"
 "Running.webp"
 "Flying.webp"
+"Gia.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
