--- a/index.html
+++ b/index.html
@@ -1527,6 +1527,7 @@ Bands/Singers
 - EDEN
 - Femtanyl
 - Grandson
+- Green Day
 - Guns N' Roses
 - Hatsune Miku artists
 - Hyper Potions
@@ -1602,9 +1603,11 @@ Non-Anime Shows & Movies
 - YooHoo & Friends
 - Zootopia
 Misc
+- Analog Horror
 - Animation Memes
 - Fursuit Dances
 - LEGO
+- Lost Media
 - Plushie and Toys Collecting
 - Pokémon Shiny Hunting
 - Roller Coasters
