--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,7 @@
 					Use my art or draw my characters, just so long as you give credit and don't repost my art places for your own clout!<br />
 					Drawing my OCs interacting with your OCs, if you think your characters would be friends with any of mine please go ahead, I'd love to see it!<br />
 					用中文和我聊天儿吧，我在学这个语言，会尽力的！中文俚语也没问题，不过如果我听起来有点冷请多包涵！
+					Just please remember I am very socially shy and don't start convos or consider someone a friend very easily "^-^
 				</div>
 			</div>
 			<div class="paragraph ripples" style="animation-delay: -0.75s">
@@ -1043,9 +1044,8 @@
 				<div class="text">
 					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are somewhat closed!<br />
 					Please don't talk to me about NSFW, politics or religion, or joke about these topics or use disabilities and illnesses in your sense of humor around me!<br />
-					Proship and NSFW of minors (even if fictional), offensive transid identities, Generative AI, Crypto, blah blah blah, that stuff is all a no from me!<br />
+					Proship and NSFW of minors (even if fictional), offensive transid identities, Generative AI, Crypto, Zionism, Rightists, blah blah blah, that stuff is all a no from me!<br />
 					Please don't take it personally if our friendship would be incompatible or try to pressure me into one!<br />
-					Just please remember I am very socially shy and don't start convos or consider someone a friend very easily "^-^
 				</div>
 			</div>
 			<div class="paragraph ripples" style="animation-delay: -1s">
