--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
 					Show me things or ask for feedback on your art, I don't mind! :3<br />
 					Use my art or draw my characters, just so long as you give credit and don't repost my art places for your own clout!<br />
 					Drawing my OCs interacting with your OCs, if you think your characters would be friends with any of mine please go ahead, I'd love to see it!<br />
-					用中文和我聊天儿吧，我在学这个语言，会尽力的！中文俚语也没问题，不过如果我听起来有点冷请多包涵！
+					用中文和我聊天儿吧，我在学这个语言，会尽力的！中文俚语也没问题，不过如果我听起来有点冷请多包涵！<br />
 					Just please remember I am very socially shy and don't start convos or consider someone a friend very easily "^-^
 				</div>
 			</div>
@@ -1044,7 +1044,7 @@
 				<div class="text">
 					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are somewhat closed!<br />
 					Please don't talk to me about NSFW, politics or religion, or joke about these topics or use disabilities and illnesses in your sense of humor around me!<br />
-					Proship and NSFW of minors (even if fictional), offensive transid identities, Generative AI, Crypto, Zionism, Rightists, blah blah blah, that stuff is all a no from me!<br />
+					Proship and NSFW of minors (even if fictional), offensive transid identities, Generative AI, Crypto, Racists, Zionists, Rightists, blah blah blah, that stuff is all a no from me!<br />
 					Please don't take it personally if our friendship would be incompatible or try to pressure me into one!<br />
 				</div>
 			</div>
