should this be capital?

--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 				<div class="text">
 					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are somewhat closed!<br />
 					Please don't talk to me about NSFW, politics or religion, or joke about these topics or use disabilities and illnesses in your sense of humor around me!<br />
-					Proship and NSFW of minors (even if fictional), offensive transid identities, Generative AI, Crypto, Racists, Zionists, Rightists, blah blah blah, that stuff is all a no from me!<br />
+					Proship and NSFW of minors (even if fictional), offensive Transid identities, Generative AI, Crypto, Racists, Zionists, Rightists, blah blah blah, that stuff is all a no from me!<br />
 					Please don't take it personally if our friendship would be incompatible or try to pressure me into one!<br />
 				</div>
 			</div>
